--- a/TicTacToe.WebApi/TicTacToe.WebApi.csproj
+++ b/TicTacToe.WebApi/TicTacToe.WebApi.csproj
@@ -202,6 +202,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\GamesController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Models\Games\PlayRequestDataModel.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
