Added more field columns in data base. Updated logic in game controller.

--- a/TicTacToe.Data/TicTacToe.Data.csproj
+++ b/TicTacToe.Data/TicTacToe.Data.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DefaultDbContext.cs" />
+    <Compile Include="IDatabaseContext.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
