--- a/TicTacToe.Services/TicTacToe.Services.csproj
+++ b/TicTacToe.Services/TicTacToe.Services.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Contracts\IGameService.cs" />
     <Compile Include="Contracts\IUserService.cs" />
     <Compile Include="GameService.cs" />
+    <Compile Include="JoinResultModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
