Fixed filtration. Response model added IsPrivate field, fixed date format.

--- a/TicTacToe.WebApi/TicTacToe.WebApi.csproj
+++ b/TicTacToe.WebApi/TicTacToe.WebApi.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Models\Games\CreateGameModel.cs" />
     <Compile Include="Models\Games\JoinModel.cs" />
+    <Compile Include="Models\Games\OrderSelector.cs" />
     <Compile Include="Models\Games\PlayRequestDataModel.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
